[gd_scene load_steps=7 format=3 uid="uid://dwr8aulhrbt85"]

[ext_resource type="Script" path="res://scripts/Projectile.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ColoredEntity.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://my3jd38hyc7k" path="res://resources/img/missile-placeholder.png" id="3"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_13bxk"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(48, 48)

[sub_resource type="CircleShape2D" id="2"]
radius = 143.093

[node name="Projectile" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
mass = 3.0
physics_material_override = SubResource("PhysicsMaterial_13bxk")
linear_damp = -1.0
angular_damp = 100.0
script = ExtResource("1")

[node name="Mask" type="Node2D" parent="."]
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="Mask"]
texture = ExtResource("3")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-12, -12, 22, 24)

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
gravity = 98.0

[node name="ExplosionShape" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("2")

[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="ExplosionArea" to="." method="_on_ExplosionArea_body_entered"]
[connection signal="body_exited" from="ExplosionArea" to="." method="_on_ExplosionArea_body_exited"]
